Removing enable preview